--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
-    <string name="app_name">OnlineHouseRentalManagement</string>
+    <string name="app_name">CSE327_PROJECT</string>
+    <string name="address">Address</string>
+    <string name="tanent">Tanent</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="contact_us">Contact Us</string>
+    <string name="chatapp">ChatAPP</string>
+    <string name="gamail">GAMAIL</string>
+    <string name="sms">SMS</string>
 </resources>
